--- a/MainProject/MVPv5/MVPv5.Client/Pages/Documents/Create.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Documents/Create.razor
@@ -2,48 +2,50 @@
 <PageTitle>Создать документ</PageTitle>
 
 <PanelElements />
-<p class="alert">@Status --------------</p>
+<p class="alert">@Status</p>
 
+@if (Request is null)
+{
+    <p><em>Загрузка...</em></p>
+}
+else
+{
+    <h3>Создать документ</h3>
+    <EditForm Model="Request" OnValidSubmit="Save" FormName="DocumentCreate">
+        <DataAnnotationsValidator />
+        <button class="btn btn-primary mb-2" type="submit">Создать</button>
 
-@* // TODO - сделать выпадающие списки *@
-<h3>Создать документ</h3>
-<EditForm Model="Request" OnValidSubmit="Save" FormName="DocumentCreate">
-    <DataAnnotationsValidator />
-    <button class="btn btn-primary mb-2" type="submit">Создать</button>
-
-    <div class="mb-2">
-        <InputText class="form-control mb-2" @bind-Value="Request.Name" placeholder="Введите название документа" />
-        <ValidationMessage For="() => Request.Name" class="text-danger" />
-    </div>
-
-    @* // TODO - выпадающий список *@
-    <div class="mb-2">
-        <InputNumber class="form-control" @bind-Value="Request.TemplateId" placeholder="Шаблон" />
-        <ValidationMessage For="() => Request.TemplateId" class="text-danger" />
-    </div>
-
-
-    @* TODO - подтягивать из куки *@
-    <div class="mb-2">
-        <InputNumber class="form-control" @bind-Value="Request.UserId" placeholder="Пользователь" />
-        <ValidationMessage For="() => Request.UserId" class="text-danger" />
-    </div>
-
-    <div class="form-control mb-2">
-        <div class="row d-flex" style="justify-self: center; width: 40%;">
-            @if (Inputs is null)
-            {
-                <p>Нет тегов для заполнения</p>
-            }
-            else
-                foreach (var input in Inputs)
-                {
-                    @* <label class="form-label mt-1 mb-0 fs-6">@input.Key</label> *@
-                    <InputTextArea class="rounded-3 mb-2" @bind-Value="input.Value" placeholder="@input.Key" />
-                }
+        <div class="mb-2">
+            <label class="form-label" for="name">Название</label>
+            <InputText id="name" class="form-control mb-2" @bind-Value="Request.Name" placeholder="Введите название документа" />
+            <ValidationMessage For="() => Request.Name" class="text-danger" />
         </div>
-    </div>
-</EditForm>
+
+        @* TODO - подтягивать из куки *@
+        <div class="mb-2">
+            <label class="form-label" for="user">Пользователь</label>
+            <InputNumber id="user" class="form-control" @bind-Value="Request.UserId" placeholder="Пользователь" />
+            <ValidationMessage For="() => Request.UserId" class="text-danger" />
+        </div>
+
+        <div class="form-control mb-2">
+            <div class="row d-flex" style="justify-self: center; width: 40%;">
+                @if (Inputs is null || !Inputs.Any())
+                {
+                    <p>Нет тегов для заполнения</p>
+                }
+                else
+                {
+                    foreach (var input in Inputs)
+                    {
+                        <label class="form-label mt-1 mb-0 fs-6 fst-italic" for="@input.Key">@input.Key</label>
+                        <InputTextArea id="@input.Key" class="rounded-3 mb-2" @bind-Value="input.Value" placeholder="@input.Key" />
+                    }
+                }
+            </div>
+        </div>
+    </EditForm>
+}
 
 
 @using System.Text
@@ -52,10 +54,13 @@
 @inject HttpClient httpClient
 @inject NavigationManager NavigationManager
 @code {
+    [SupplyParameterFromQuery(Name = "id")]
+    public int IdTemplate { get; set; }
+
     private string? Status { get; set; } = "...";
     private string ButtonStyle => "btn btn-outline-primary btn-sm px-4";
 
-    private DocumentCreateRequest Request { get; set; } = new();
+    private DocumentCreateRequest? Request { get; set; }
     private TemplateReadResponse? Template;
 
     private List<InputModel>? Inputs { get; set; }
@@ -68,7 +73,7 @@
     private async Task Save()
     {
         Status = string.Empty;
-        if (Template is null) return;
+        if (Template is null || Request is null) return;
         try
         {
             Request.Data = Inputs?
@@ -95,8 +100,7 @@
         Status = string.Empty;
         try
         {
-            // var response = await httpClient.GetAsync($"Template/read/{Id}");
-            var response = await httpClient.GetAsync($"Template/read/8");
+            var response = await httpClient.GetAsync($"Template/read/{IdTemplate}");
             if (!response.IsSuccessStatusCode)
             {
                 Status = await response.Content.ReadAsStringAsync();
@@ -108,6 +112,11 @@
                 Status = "Пустой ответ сервера";
                 return;
             }
+
+            Request = new()
+                {
+                    TemplateId = IdTemplate
+                };
 
             if (Template.Tags is null) return;
             Inputs = new(Template.Tags.Select(t => new InputModel() { Key = t }));
