--- a/MainProject/MVPv5/MVPv5.Client/Pages/Documents/Index.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Documents/Index.razor
@@ -1,12 +1,44 @@
 ﻿@page "/documents"
 <PageTitle>Документы</PageTitle>
 
-@inject NavigationManager NavigationManager
-<button class="btn btn-primary" @onclick="ToCreate">Создать</button>
+<p class="alert">@Status</p>
+
+
+@if (PreCreate)
+{
+    if (Templates is null || !Templates.Any())
+    {
+        <p>Отсутствуют шаблоны для выбора</p>
+    }
+    else
+    {
+        <div class="mb-2">
+            <label class="form-label">Шаблон</label>
+            <select class="form-control" @onchange="TemplateChanged">
+                @foreach (var option in Templates.Select(i => i.Name))
+                {
+                    <option value="@option">@option</option>
+                }
+            </select>
+        </div>
+        if (TemplateId != 0)
+        {
+            <button type="button" class="btn btn-primary" @onclick="CreateDoc">Создать документ</button>
+        }
+    }
+}
+else
+{
+    <button type="button" class="btn btn-primary" @onclick="ToCreate">Создать</button>
+}
 
 @if (Searching is null)
 {
-    <p><em>@Status</em></p>
+    <p><em>Загрузка...</em></p>
+}
+else if (!Searching.Any())
+{
+    <p><em>Документов нет</em></p>
 }
 else
 {
@@ -21,6 +53,9 @@ else
             <div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
                 <a href="@($"documents/edit?id={p.Id}")">Детали</a>
             </div>
+            <div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                <button type="button" class="btn btn-link" @onclick="() => BuildAndDownloadFile(p)">Собрать и скачать</button>
+            </div>
         </TemplateColumn>
 
         <Paginator State="pagination" />
@@ -29,9 +64,11 @@ else
 
 
 @using MVPv5.Application.Contracts.Document.v1
+@using MVPv5.Application.Contracts.Template.v1
 @inject HttpClient httpClient
+@inject NavigationManager NavigationManager
 @code {
-    private string? Status { get; set; } = "Загрузка...";
+    private string? Status { get; set; }
     private IQueryable<DocumentReadResponse>? Searching { get; set; }
 
     static int size = 10;
@@ -39,7 +76,32 @@ else
 
     protected override void OnParametersSet()
     {
-        // pagination = new PaginationState { ItemsPerPage = Searching?.Count() < 10 ? Searching.Count() : size };
+        var count = 1;
+        if (Searching is not null && Searching.Any()) count = Searching.Count();
+        pagination = new PaginationState { ItemsPerPage = count < 10 ? count : size };
+    }
+
+    @inject IJSRuntime JS
+    private async Task BuildAndDownloadFile(DocumentReadResponse document)
+    {
+        try
+        {
+            var stream = await httpClient.GetStreamAsync($"document/build-and-download/{document.Id}");
+            using var memoryStream = new MemoryStream();
+            await stream.CopyToAsync(memoryStream);
+            var bytes = memoryStream.ToArray();
+
+            await JS.InvokeVoidAsync("downloadFromByteArray", new
+            {
+                byteBase64 = Convert.ToBase64String(bytes),
+                fileName = document.Name,
+                mimeType = "application/octet-stream"
+            });
+        }
+        catch (Exception ex)
+        {
+            Status = ex.Message;
+        }
     }
 
     protected override async Task OnInitializedAsync()
@@ -52,12 +114,45 @@ else
         {
             Searching = (await response.Content.ReadFromJsonAsync<IEnumerable<DocumentReadResponse>>())!.AsQueryable();
         }
-        else
-        {
-            Status = "Не получилось загрузить файлы";
-            return;
-        }
     }
 
-    private void ToCreate() => NavigationManager.NavigateTo("/documents/create");
+    private async void ToCreate()
+    {
+        Status = string.Empty;
+        var response = await httpClient.SendAsync(
+            new HttpRequestMessage(HttpMethod.Get, "Template/read-all")
+            .SetBrowserRequestCredentials(BrowserRequestCredentials.Include));
+
+        if (response.IsSuccessStatusCode)
+        {
+            Templates = await response.Content.ReadFromJsonAsync<IEnumerable<TemplateReadResponse>>();
+            if (Templates is not null) TemplateId = Templates.First().Id;
+            PreCreate = true;
+        }
+        else
+        {
+            Status = "Нет шаблонов в ответе";
+        }
+        StateHasChanged();
+    }
+    private void CreateDoc() => NavigationManager.NavigateTo($"/documents/create?id={TemplateId}");
+
+    private bool PreCreate { get; set; } = false;
+    private IEnumerable<TemplateReadResponse>? Templates { get; set; }
+    // private TemplateReadResponse? SelectedTemplate { get; set; }
+    private int TemplateId { get; set; }
+
+    private void TemplateChanged(ChangeEventArgs e)
+    {
+        Status = string.Empty;
+        if (Templates is null || e.Value is null)
+        {
+            Status = "Нет выбора";
+        }
+        else
+        {
+            TemplateId = Templates.FirstOrDefault(i => i.Name == e.Value.ToString())!.Id;
+        }
+        StateHasChanged();
+    }
 }
